<resources>
    <string name="app_name">My Restaurant</string>

    <string name="FACEBOOK_APP_ID">455731598310249</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">1acd25fdb8382620bb462dbdc48e11d8</string>
    <string name="title_activity_home">My Restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="update_information">Update Information</string>
    <string name="sign_out">Sign Out</string>
    <string name="nearby_restaurant">Nearby Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="update_info">Update Infomation</string>
    <string name="our_specialized">Our Specialized</string>
    <string name="money_sign">$</string>
    <string name="view_cart">View Cart</string>
    <string name="add_on">Add On</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="search">Search</string>
    <string name="menu_fav">Favorite</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="your_order">Your Order</string>
    <string name="title_activity_nearby_restaurant">Map</string>

</resources>
