<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FoodDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/button_color"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:titleTextColor="@android:color/white" />

            </com.google.android.material.appbar.AppBarLayout>

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/img_food_detail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_attach_money_black_24dp" />

                        <TextView
                            android:id="@+id/txt_money"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="8"
                            android:text="200.0"
                            android:textSize="18sp" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fab_add_to_cart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|right"
                            android:src="@drawable/ic_shopping_cart_white_24dp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/magnifika"
                            android:text="@string/size"
                            android:textSize="22sp" />

                        <RadioGroup
                            android:id="@+id/rdi_group_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3">


                        </RadioGroup>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.github.florent37.expansionpanel.ExpansionHeader
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:expansion_headerIndicator="@id/headerIndicator"
                            app:expansion_layout="@id/expansionLayout"
                            app:expansion_toggleOnClick="true">

                            <!-- HEADER -->
                            <TextView
                                android:text="@string/add_on"
                                android:textSize="22sp"
                                android:fontFamily="@font/magnifika"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <!-- HEADER INDICATOR -->
                            <ImageView
                                android:id="@+id/headerIndicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|right"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

                        </com.github.florent37.expansionpanel.ExpansionHeader>

                        <com.github.florent37.expansionpanel.ExpansionLayout
                            android:id="@+id/expansionLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recycler_addon"
                                android:layout_width="match_parent"
                                android:layout_height="300dp" />

                        </com.github.florent37.expansionpanel.ExpansionLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/description"
                            android:textStyle="bold"
                            android:fontFamily="@font/magnifika"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/txt_description"
                            android:text="@string/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/btn_view_cart"
            android:text="@string/view_cart"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:fontFamily="@font/magnifika"
            android:background="@drawable/border_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>